update to jetty 11, remove jersey from client impl (#1865)
* update to jetty 11, remove jersey from client impl
* expose sni hostcheck and required options in jetty
* install net-tools for ifconfig
* move AthenzReqeustLog to server-common
* remove dependency on jetty-util from auth-core

Signed-off-by: Henry Avetisyan <hga@verizonmedia.com>

Co-authored-by: Henry Avetisyan <hga@verizonmedia.com>